# shorelark

./: Cargo.toml
libs/genetic-algorithm/: Cargo.toml
libs/neural-network/: Cargo.toml
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  world.rs
libs/simulation/legacy/: Cargo.toml
libs/simulation/legacy/src/: animal.rs  animal_individual.rs  food.rs  lib.rs
libs/simulation/src/: lib.rs  world.rs
www/: package-lock.json  package.json  webpack.config.js
