[package]
name = "lib-simulation"
version = "0.0.0"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
edition = "2021"

[dependencies]
nalgebra = { version = "0.32", features = ["rand-no-std"] }
rand = "0.8"

lib-genetic-algorithm = { path = "../genetic-algorithm" }
lib-neural-network = { path = "../neural-network" }
lib-simulation-legacy = { path = "legacy" }

[dev-dependencies]
approx = "0.5"
rand_chacha = "0.3"
test-case = "1.1"
